fix: SonarQubes tips and errors